--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "voting",
   "version": "0.1.0",
-  "homepage": "https://[Haonan75].github.io/[voting]",
+  "homepage": "https://Haonan75.github.io/voting",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
